common/force-app/main/default/objects/EOI_Lead_Investor__c/EOI_Lead_Investor__c.object-meta.xml
<CustomObject>
    <description>This Object will be related to the EOI Object.</description>
    <label>EOI Lead Investor</label>
    <nameField>
        <label>EOI Lead Investors Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EOI Lead Investors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>