common/force-app/main/default/objects/EOI_Lead_Investor__c/fields/Lead_Investor_Amount__c.field-meta.xml
<CustomField>
    <fullName>Lead_Investor_Amount__c</fullName>
    <label>Lead Investor Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>