common/force-app/main/default/objects/EOI_Lead_Investor__c/fields/Lead_Investor_Bio__c.field-meta.xml
<CustomField>
    <fullName>Lead_Investor_Bio__c</fullName>
    <label>Lead Investor Bio</label>
    <type>TextArea</type>
</CustomField>