common/force-app/main/default/objects/EOI_Lead_Investor__c/fields/Related_EOI__c.field-meta.xml
<CustomField>
    <fullName>Related_EOI__c</fullName>
    <label>Related EOI</label>
    <referenceTo>EOI__c</referenceTo>
    <relationshipLabel>EOI Lead Investors</relationshipLabel>
    <relationshipName>EOI_Lead_Investors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>